fixed nav overflow

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -10,7 +10,7 @@
       vertical-align: middle;
       line-height: 80px;
       font-weight: 800;
-      font-size: 18px;
+      font-size: 14px;
        }
 
 .nav-link:hover {
