--- a/src/index.scss
+++ b/src/index.scss
@@ -10,9 +10,9 @@ body {
 	margin: 0;
 	background-color: rgb(29, 29, 29);
 
-	height: 100vh;
-	width: 100vw;
-	overflow-x: hidden;
+	height: 100%;
+	width: 100%;
+	// overflow-x: hidden;
 }
 
 html {
